tests/idris2/data/record022/expected
1/1: Building EmptySearch (EmptySearch.idr)
Error: Expected list of determining parameters.

EmptySearch:2:4--2:10
 1 | record R where
 2 |   [search]
        ^^^^^^

